--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,86 @@
 body {
-    background-color: #546D64;
-    width: 100%;
-    padding: 5px;
+    padding: 0;
+    margin: 0;
+}
 
+:root {
+    --main-red-color: #C44536;
+    --text-color: #283D3B;
+    --list-color: #EDDDD4;
+    /* 
+    var(--main-red-color)
+    var(--text-color)
+    var(--list-color)
+    */
 }
 
 header {
-    background-color: white;
-    width: 100%;
+    background-color:var(--main-red-color);
+    height: 80px;
+}
+
+header img {
+    position: absolute;
+    width: 300px;
+    height: 90px;
+    margin-left: 2em;
+    margin-top: 3em;
+}
+
+.logo_text {
+    display: inline;
+    position: absolute;
+    right: 3em;
+    border: 2px solid white;
+    padding: 6px;
+    border-radius: 5px;
+    color: white;
+    margin: 0;
+    margin: 0.4em 0;
+}
+
+nav {
     display: inline-block;
+    justify-content: center;
+}
+
+ul {
+    padding: 0;
+}
+
+nav ul {
+    list-style-type: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    text-decoration: none;
+    margin: 2em 0;
+}
+
+nav ul li {
+    display: inline;
+    border: 30.03px solid var(--main-red-color);
+    background-color: var(--main-red-color);
+    border-radius: 4px;
+}
+
+nav ul li :hover {
+    display: inline;
+    border: 30.03px solid var(--list-color);
+    background-color: var(--list-color);
+    border-radius: 4px;
+}
+
+nav ul a {
+    text-decoration: none;
+    color:white
+    
+}
+
+nav ul a:hover {
+    text-decoration: none;
+    color: var(--text-color);
+    
 }
