--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,9 @@
+@import "fonts.css";
+
 body {
     padding: 0;
     margin: 0;
+    font-family: Roboto;
 }
 
 :root {
@@ -12,6 +15,10 @@ body {
     var(--text-color)
     var(--list-color)
     */
+}
+
+h1 {
+    font-family: Roboto-Bold;
 }
 
 header {
@@ -26,7 +33,7 @@ header {
     top: 100%;
     width: 100%;
     background-color: var(--main-red-color);
-    height: 3.5rem;
+    height: 3.45rem;
 }
 
 header img {
@@ -34,7 +41,7 @@ header img {
     width: 300px;
     height: 90px;
     margin-left: 5em;
-    margin-top: 1.7em;
+    margin-top: 1.6em;
 }
 
 .logo_text {
@@ -66,26 +73,63 @@ nav ul {
 
 nav ul li {
     display: inline;
-    border: 1.33em solid white;
+    border: 0.9em solid white;
     background-color: white;
+    transition: background-color 0.35s, border 0.35s;
+}
+
+nav ul li:hover {
+    border: 1.33em solid rgb(241, 240, 240);
+    background-color: rgb(241, 240, 240);
 }
 
 .momentalni_stranka{
-    border: 1.3em solid #d4d9d5;
-    background-color: #d4d9d5;
+    border: 1.3em solid #dbdfdc !important;
+    background-color: #dbdfdc !important;
 }
 
 nav ul a {
     text-decoration: none;
     color: var(--text-color);
+    font-family: Roboto-Medium;
 }
 
 .background_foto {
-    height: 500;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-image: url(../images/background_foto.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-    background-attachment: fixed;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main_container {
+    border: 6px solid var(--main-red-color);
+    padding: 2em;
+    border-radius: 15px;
+    background-color: #C44536;
+    color: black;
+    font-size: 20px;
+    opacity: 0.95;
+}
+
+.main_container p {
+    text-align: center;
+}
+
+footer {
+    height: 7rem;
+    width: 100%;
+    background-color: var(--main-red-color)
+}
+
+footer p,a,h4 {
+    margin: 0;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    line-height: 28px;
 }
