--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,135 +1,92 @@
 @import "fonts.css";
 
-body {
-    padding: 0;
-    margin: 0;
-    font-family: Roboto;
-}
-
 :root {
     --main-red-color: #C44536;
-    --text-color: #283D3B;
     --list-color: #EDDDD4;
     /* 
     var(--main-red-color)
-    var(--text-color)
     var(--list-color)
     */
 }
 
-h1 {
-    font-family: Roboto-Bold;
-}
-
-header {
-    background-color: white;
-    height: 60px;
-    width: 100%;
-    position:fixed;
-}
-
-.prouzek {
-    position: absolute;
-    top: 100%;
-    width: 100%;
-    background-color: var(--main-red-color);
-    height: 3.45rem;
-}
-
-header img {
-    position:fixed;
-    width: 300px;
-    height: 90px;
-    margin-left: 5em;
-    margin-top: 1.6em;
-}
-
-.logo_text {
-    position: fixed;
-    right: 3em;
-    border: 2px solid var(--main-red-color);
-    padding: 6px;
-    border-radius: 5px;
-    color: var(--main-red-color);
-    margin: 0.1em 0;
-}
-
-ul {
+body {
+    margin: 0;
     padding: 0;
+    font-family: Roboto, Arial, sans-serif ;
+    padding-top: 60px;
+}
+
+.header-flex-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 60px;
+    
+    background-color: white;
+}
+
+ .header-logo {
+    height: 90px ;
+    margin-top: 82px;
+    margin-left: 40px;
+    
 }
 
 nav ul {
-    position: fixed;
-    list-style-type: none;
-    top: 0;
-    left: 0;
-    right: 0;
-    margin: 1.3em 0;
-}
-
-.navbar {
+    padding: 0;
+    display: flex;
     text-align: center;
-}
+    justify-content: center;
 
-nav ul li {
-    display: inline;
-    border: 0.9em solid white;
-    background-color: white;
-    transition: background-color 0.35s, border 0.35s;
-}
-
-nav ul li:hover {
-    border: 1.33em solid rgb(241, 240, 240);
-    background-color: rgb(241, 240, 240);
-}
-
-.momentalni_stranka{
-    border: 1.3em solid #dbdfdc !important;
-    background-color: #dbdfdc !important;
+    list-style-type: none;
 }
 
 nav ul a {
     text-decoration: none;
-    color: var(--text-color);
+    color: black;
     font-family: Roboto-Medium;
 }
 
-.background_foto {
-    height: 100vh;
-    width: 100vw;
-    background-image: url(../images/background_foto.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+nav ul li a {
+    margin: 0 8px;
+    border: 20px solid white;
+    background-color: white;
+    transition: background-color 0.35s, border 0.35s;
 }
 
-.main_container {
-    border: 6px solid var(--main-red-color);
-    padding: 2em;
-    border-radius: 15px;
-    background-color: #C44536;
-    color: black;
-    font-size: 20px;
-    opacity: 0.95;
+nav ul li a:hover {
+    border: 26px solid rgb(247, 246, 246);
+    background-color: rgb(247, 246, 246);
 }
 
-.main_container p {
+.momentalni_stranka{
+    border: 26px solid #dbdfdc !important;
+    background-color: #dbdfdc !important;
+}
+
+.header-text-outline {
+    margin-right: 50px;
+    width: 290px;
+}
+
+.header-text-logo {
+
+    border-left: 2px solid var(--main-red-color);
+    border-right: 2px solid var(--main-red-color);
+    padding: 15px;
+    color: var(--main-red-color);
+    font-family: Roboto-Bold;
+    font-size: 30px;
     text-align: center;
 }
 
-footer {
-    height: 7rem;
+ .prouzek {
+    background-color: var(--main-red-color);
+    height: 58px;
     width: 100%;
-    background-color: var(--main-red-color)
-}
-
-footer p,a,h4 {
-    margin: 0;
-    color: black;
-    text-align: center;
-    text-decoration: none;
-    line-height: 28px;
 }
