--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,11 +30,17 @@ body {
     background-color: white;
 }
 
+/*---HEADER LOGO*/
  .header-logo {
     height: 90px ;
     margin-top: 82px;
     margin-left: 40px;
-    
+}
+
+
+/* ---NAVBAR--- */
+.navbar {
+    display: none;
 }
 
 nav ul {
@@ -69,13 +75,45 @@ nav ul li a:hover {
     background-color: #dbdfdc !important;
 }
 
+/* ---HAMBURGER NAVBAR---*/
+
+  .hamburger {
+      border: none;
+      background-color: white;
+      font-size: 30px;
+      margin-right: 20px;
+      cursor: pointer;
+  }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 40px;
+    background-color: #f1f1f1;
+    min-width: 270px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+.show {
+    display: block;
+}
+
+
+/*---HEADER TEXT*/
 .header-text-outline {
     margin-right: 50px;
     width: 290px;
 }
 
 .header-text-logo {
-
     border-left: 2px solid var(--main-red-color);
     border-right: 2px solid var(--main-red-color);
     padding: 15px;
@@ -89,4 +127,51 @@ nav ul li a:hover {
     background-color: var(--main-red-color);
     height: 58px;
     width: 100%;
+}
+
+@media(max-width: 1150px) {
+    .header-text-outline {
+        display: none;
+    }
+}
+
+@media(min-width: 810px) {
+    .hamburger{
+        display: none;
+    }
+    .navbar {
+        display:flex;
+    }
+}
+
+@media(max-width: 640px) {
+    .header-logo {
+        margin-left: 5px;
+        height: 70px;
+        margin-top: 76px;
+    }
+    .prouzek {
+        height: 48px;
+    }
+    .dropdown-content {
+        font-size: 16px;
+        min-width: 200px;
+    }
+}
+
+@media(max-width: 480px) {
+    .header-logo {
+        height: 60px;
+        margin-top: 74px;
+    }
+    .prouzek {
+        height: 42px;
+    }
+    .hamburger {
+        font-size: 25px;
+    }
+    .dropdown-content {
+        font-size: 14px;
+        min-width: 180px;
+    }
 }
