--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,22 +68,29 @@ nav ul li a {
 nav ul li a:hover {
     border: 26px solid rgb(247, 246, 246);
     background-color: rgb(247, 246, 246);
+    box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.4);
 }
 
 .momentalni_stranka{
     border: 26px solid #dbdfdc !important;
     background-color: #dbdfdc !important;
+    box-shadow: none !important;
 }
 
 /* ---HAMBURGER NAVBAR---*/
 
-  .hamburger {
+.hamburger {
       border: none;
       background-color: white;
-      font-size: 30px;
       margin-right: 20px;
       cursor: pointer;
-  }
+      height: 40px;
+      width: 50px;
+}
+
+.dropdown .fa {
+    font-size: 30px;
+}
 
 .dropdown-content {
     display: none;
@@ -93,14 +100,14 @@ nav ul li a:hover {
     min-width: 270px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  }
+}
   
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
+}
 
 .show {
     display: block;
@@ -110,7 +117,6 @@ nav ul li a:hover {
 /*---HEADER TEXT*/
 .header-text-outline {
     margin-right: 50px;
-    width: 290px;
 }
 
 .header-text-logo {
@@ -127,6 +133,7 @@ nav ul li a:hover {
     background-color: var(--main-red-color);
     height: 58px;
     width: 100%;
+    box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.6);
 }
 
 @media(max-width: 1150px) {
@@ -136,7 +143,7 @@ nav ul li a:hover {
 }
 
 @media(min-width: 810px) {
-    .hamburger{
+    .dropdown .fa {
         display: none;
     }
     .navbar {
@@ -167,11 +174,12 @@ nav ul li a:hover {
     .prouzek {
         height: 42px;
     }
-    .hamburger {
+    .dropdown .fa {
         font-size: 25px;
     }
     .dropdown-content {
         font-size: 14px;
         min-width: 180px;
     }
+
 }
