--- a/styles/styles.css
+++ b/styles/styles.css
@@ -179,7 +179,7 @@ nav ul li a:hover {
     height: 100%;
     padding-bottom: 70px;
 
-
+    background-color:#f1f1f1;
 }
 
 .card-long-flex-wrap {
