--- a/styles_js/styles.css
+++ b/styles_js/styles.css
@@ -143,18 +143,19 @@ nav ul li a:hover {
     position: fixed;
     top: 60px;
     z-index: 1;
-    background-color: var(--main-red-color);
+    background: linear-gradient(var(--main-red-color),#b84b3d);
     height: 58px;
     width: 100%;
     box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.9);
 }
 
 
-/* ---MAIN FOTO-BACKGROUND--- */
-
-.background {
+/* ---MAIN FOTO-BACKGROUND / PARALLAX--- */
+.parallax {
+    background: linear-gradient(var(--border-color),var(--main-red-color));
     background-image: url(../images/background_foto.jpg);
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
     background-position: center center;
     height: 100vh;
@@ -163,6 +164,7 @@ nav ul li a:hover {
     justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.8);
+    
 }
 
 .main-border-wrap {
@@ -395,6 +397,10 @@ nav ul li a:hover {
     height: 100%;
 }
 
+.mapa-kontakt iframe {
+    width: 100%;
+    height: 100%;
+}
 
 /*---ZDROJE---*/
 .zdroje {
